see extended description
-fixed crash with https urls
-remember height
-strip newlines from tweets

--- a/o3o/Properties/Settings.settings
+++ b/o3o/Properties/Settings.settings
@@ -29,5 +29,8 @@
     <Setting Name="Layout" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">1</Value>
     </Setting>
+    <Setting Name="LastWindowHeight" Type="System.Double" Scope="User">
+      <Value Profile="(Default)">700</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
