--- a/o3o/app.config
+++ b/o3o/app.config
@@ -34,6 +34,9 @@
             <setting name="Layout" serializeAs="String">
                 <value>1</value>
             </setting>
+            <setting name="LastWindowHeight" serializeAs="String">
+                <value>700</value>
+            </setting>
         </o3o.Properties.Settings>
     </userSettings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup>
