--- a/o3o/app.config
+++ b/o3o/app.config
@@ -37,6 +37,12 @@
             <setting name="LastWindowHeight" serializeAs="String">
                 <value>700</value>
             </setting>
+            <setting name="ShowNotificationPopup" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="PlayNotificationSound" serializeAs="String">
+                <value>True</value>
+            </setting>
         </o3o.Properties.Settings>
     </userSettings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup>
